compiler/toc-hir-lowering/tests/snapshots/lowering__lower_complex_real_literal-13.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : int _ := 7.4109846876186981626485318930233205854758970392148714663837852375101326090531312779794975454245398856969484704316857659638998506553390969459816219401617281718945106978546710679176872575177347315553307795408549809608457500958111373034747658096871009590975442271004757307809711118935784838675653998783503015228055934046593739791790738723868299395818481660169122019456499931289798411362062484498678713572180352209017023903285791732520220528974020802906854021606612375549983402671300035812486479041385743401875520901590172592547146296175134159774938718574737870961645638908718119841271673056017045493004705269590165763776884908267986972573366521765567941072508764337560846003984904972149117463085539556354188641513168478436313080237596295773983001708984374999e-324"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..778): "<root>"@(dummy)
      StmtBody@(src/main.t:0..778): []
        StmtItem@(src/main.t:0..11): ItemId(0)
          ConstVar@(src/main.t:0..11): var "_"@(src/main.t:4..5)
            Primitive@(src/main.t:8..11): Int
        Assign@(src/main.t:12..778)
          Name@(src/main.t:12..13): "_"@(src/main.t:4..5)
          Literal@(src/main.t:17..778): Real(5e-324)
